the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: TODO-FRONTEND-IMAGE
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /mnt/todo-image-cache
              name: todo-image-cache-vol
      volumes:
        - name: todo-image-cache-vol
          persistentVolumeClaim:
            claimName: todo-image-cache
