the_project/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app-route
  namespace: project
spec:
  parentRefs:
    - name: todo-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todo-app-svc
          port: 2346

    - matches:
        - path:
            type: PathPrefix
            value: /todos
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         type: ReplacePrefixMatch
      #         replacePrefixMatch: /
      backendRefs:
        - name: todo-backend-svc
          port: 2345
